# cs6771-tutorials

./: .gitignore
tute03/: CMakeLists.txt  README.md
tute03/solutions/3.1/: sort_descending.cpp
tute03/solutions/3.3/: stats.cpp
tute03/solutions/3.4/: invert.cpp
tute03/src/3.1/: sort_descending.cpp  sort_descending.test.cpp
tute03/src/3.2/: vsort.cpp  vsort.test.cpp
tute03/src/3.3/: stats.cpp  stats.test.cpp
tute03/src/3.4/: invert.cpp  invert.h  invert.test.cpp
tute03/src/3.5/: microbenchmark.cpp  microbenchmark.h
tute03/src/3.6/: reversal.md
tute03/src/3.7/: iterator.cpp
tute03/src/3.8/: algorithms.md
tute04/: CMakeLists.txt  README.md
tute04/solutions/: theory.md
tute04/solutions/4.5/: namespaced.h
tute04/src/4.1/: namespace.cpp  namespace.md
tute04/src/4.2/: object.cpp
tute04/src/4.3/: defaults_and_deletes.cpp
tute04/src/4.4/: construction_confusion.cpp
tute04/src/4.5/: namespaced.cpp  namespaced.h
tute04/src/4.7/: rational.h
tute05/solutions/5.4/: book.h
tute05/solutions/5.6/: rope.h
tute05/src/5.4/: book.h  book.test.cpp
tute05/src/5.5/: rational_oo.cpp  rational_oo.h
tute05/src/5.6/: rope_user.cpp
tute07/: README.md
tute07/solutions/7.4/: matrix.h
tute07/src/7.3/: rethrow.cpp  rethrow.h  rethrower.cpp
tute07/src/7.4/: matrix.cpp  matrix.h  matrix.test.cpp
tute08/: CMakeLists.txt  notes.md
tute08/solutions/: 8.1.txt
tute08/solutions/8.3/: marking.txt
tute08/src/8.2/: static_dymo.cpp
tute08/src/8.3/: diamond_problem.cpp  order.h  ordered.cpp
tute08/src/8.4/: expr.h  expression.cpp
tute09/: CMakeLists.txt  notes.md
tute09/solutions/bonus/: comp_sum.hpp
tute09/src/9.1/: 9.1.md
tute09/src/9.2/: 9.2.cpp  9.2.hpp  9.2.md
tute09/src/9.3/: ring.cpp  ring.h
tute09/src/bonus/: comp_sum.cpp  comp_sum.hpp
tute10/: CMakeLists.txt  notes.md
tute10/solutions/: function.hpp  notes.md
tute10/src/: forward.cpp  function.cpp  function.hpp
